2014-11-27  Kirit Saelensminde  <kirit@felspar.com>
 Added a mechanism for joining paths (`fostlib::join_paths`) in the same sort of way that URL paths are joined.

2014-10-31  Kirit Saelensminde  <kirit@felspar.com>
 Improved FSL_CHECK so it doesn't need to declare a local variable.

2014-10-18  Kirit Saelensminde  <kirit@felspar.com>
 Added a new test macro `FSL_CHECK_ERROR` that ensures that the error between two values (normally reals) is less than an error term.

2014-09-07  Kirit Saelensminde  <kirit@felspar.com>
 The meta data set on the progress for a task is now made available to the meter readings.
 There is a new `fostlib::cli::monitor` function that can be used to display a progress bar monitoring work towards a future.
 Futures now return `const&`s instead of copies of the value when they're dereferenced.

2014-09-06  Kirit Saelensminde  <kirit@felspar.com>
 Allow `fostlib::future<>` instances to be compared for equality.

2014-08-30  Kirit Saelensminde  <kirit@felspar.com>
 The `fostlib::accessors` now use perfect forwarding if `FOST_HAS_MOVE` is defined.

2014-08-16  Kirit Saelensminde  <kirit@felspar.com>
 Need to not pretty print the JSON values when showing the full settings database as we're outputting something approximating a CSV file.

2014-06-02  Kirit Saelensminde  <kirit@felspar.com>
 Allow a `timestamp` to be coerced to a `boost::filesystem::wpath` with a file system friendly string.
 Make the last parameter to `replace_all` default to `fostlib::null`.

2014-05-31  Kirit Saelensminde  <kirit@felspar.com>
 Redesign the way that threads are handled to try to improve reliability when things go wrong, especially with C++11.
 Change the output streaming for `fostlib::string` to use the underlying platform implementation.
 Try to set BOOST_SPIRIT_THREADSAFE to see if this makes a difference to thread problems associated with Boost Spirit.

2014-05-30  Kirit Saelensminde  <kirit@felspar.com>